<resources>
    <string name="app_name">CT Projekt</string>
    <string name="difficultyText">Wähle eine Schwierigkeit aus!</string>


    /* MEMORY START */

    <string name="memoryBabyDifficulty">Baby</string>
    <string name="memoryEasyDifficulty">Einfach</string>
    <string name="memoryMediumDifficulty">Mittel</string>
    <string name="memoryHardDifficulty">Schwierig</string>
    <string name="memorySweatDifficulty">Schwitzer</string>
    <string name="memoryDeityDifficulty">Gottheit</string>
    <string name="title_activity_firebase_u_i">FirebaseUIActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    /* MEMORY END */
</resources>